infrastructure/postgresql/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-storage
              mountPath: /var/lib/pgadmin
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 500m
              memory: 400Mi
      volumes:
        - name: pgadmin-storage
          emptyDir: {}
